--- a/src/TinyBlazorAdmin/wwwroot/appsettings.json
+++ b/src/TinyBlazorAdmin/wwwroot/appsettings.json
@@ -1,11 +1,11 @@
 {
   "AzureAd": {
-    "Authority": "https://login.microsoftonline.com/206bad4c-d071-4c91-9181-ef7047e6590b",
-    "ClientId": "737debc6-39bb-4e71-8c3e-27bdf3b18846",
+    "Authority": "https://login.microsoftonline.com/40b022d8-f9b5-47b6-a443-c1e346a7e648",
+    "ClientId": "40b022d8-f9b5-47b6-a443-c1e346a7e648",
     "ValidateAuthority": true
   },
   "UrlShortenerSecuredService": {
-    "Endpoint": "https://azshorterdevrtm3e.azurewebsites.net/"
+    "Endpoint": "https://azshortertool_evaluation.azurewebsites.net/"
   },
   "DetailedErrors":true
 }
