--- a/src/TinyBlazorAdmin/wwwroot/appsettings.json
+++ b/src/TinyBlazorAdmin/wwwroot/appsettings.json
@@ -5,7 +5,7 @@
     "ValidateAuthority": true
   },
   "UrlShortenerSecuredService": {
-    "Endpoint": "https://azshortertool_evaluation.azurewebsites.net/"
+    "Endpoint": "https://shortenertoolszfdjk.azurewebsites.net/"
   },
   "DetailedErrors":true
 }
