--- a/src/TinyBlazorAdmin/wwwroot/appsettings.json
+++ b/src/TinyBlazorAdmin/wwwroot/appsettings.json
@@ -5,7 +5,7 @@
     "ValidateAuthority": true
   },
   "UrlShortenerSecuredService": {
-    "Endpoint": "https://shortenertoolszfdjk.azurewebsites.net/"
+    "Endpoint": "api://1faada7c-0b7f-4c7b-b3da-59a7e3de9321/"
   },
   "DetailedErrors":true
 }
